BROKEN, introduced instability during READ operation - need to figure out why, fixed a bug with the api which prevented certain lines from being printed, especially with speech marks

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,7 @@
 		$("#bufferStatus").append("<tr><td>aheadBuffer</td><td>"+data.buffers[0].aheadBufferLen+"</td></tr>")
 		$("#bufferStatus").append("<tr><td>aheadBufferLockedBy</td><td>"+data.buffers[1].aheadBufferLockedBy+"</td></tr>")
 		$("#bufferStatus").append("<tr><td>bufferSizeCnt</td><td>"+data.buffers[2].bufferSizeCntLen+"</td></tr>")
+		$("#bufferStatus").append("<tr><td>active_connections</td><td>"+data.buffers[3].active_connections+"</td></tr>")
 	}
 
 	</script>
